# MGraph-AI__Service__Graph

./: .gitignore  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml
docs/dev-briefs/v1.1.2__core_graph_methods/: v1.1.2__type-safe-fastapi-pattern-with-enum-based-method-routing.md  v1.1.4__graph-service__comprehensive-llm-brief.md
docs/llm-briefs/: v1.2.2__mgraph-ai-service-graph__llm-briefing.md
mgraph_ai_service_graph/: __init__.py  config.py
mgraph_ai_service_graph/exceptions/: Graph__Ref__Conflict__Error.py  Graph__Ref__Error.py  Graph__Ref__Not_Found__Error.py  Graph__Service__Error.py
mgraph_ai_service_graph/fast_api/: Graph_Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_graph/fast_api/routes/: Routes__Graph.py  Routes__Graph__Batch.py  Routes__Graph__CRUD.py  Routes__Graph__Edit.py  Routes__Graph__Export.py  Routes__Graph__Query.py
mgraph_ai_service_graph/schemas/batch_execution/: Schema__Graph__Batch__Command.py  Schema__Graph__Batch__Request.py  Schema__Graph__Batch__Response.py
mgraph_ai_service_graph/schemas/enums/: Enum__Graph__Area.py  Enum__Graph__Area__Updated.py  Enum__Graph__Methods__CRUD.py  (+4 more)
mgraph_ai_service_graph/utils/: Version.py
scripts/: release-script-v1.0.0.sh  run-locally.sh  update-version.sh
tests/deploy_aws/: test_Deploy__Service__base.py  test_Deploy__Service__to__dev.py
tests/integration/: test_Cache_Dev_Server__Clean_Up.py  test_experiment_with_graph_rendering.py
tests/unit/: Graph__Service__Fast_API__Test_Objs.py  Service__Fast_API__Test_Objs.py  test_config.py
(+149 files in other folders)
